--- a/src/components/Getallcertificates.css
+++ b/src/components/Getallcertificates.css
@@ -138,10 +138,11 @@ th {
 
 
 .close {
-    color: #aaa;
+    color: #aaaaaa0a;
     float: right;
     font-size: 28px;
     font-weight: bold;
+    border: 1px solid rgba(218, 210, 210, 0) !important;
 }
 
 .close:hover,
@@ -171,4 +172,15 @@ th {
 
 .summary-content {
     padding: 10px 0;
+}/* Example CSS to maintain image position */
+.modal-student-pic {
+    width: 78px;
+    height: 78px;
+    object-fit: inherit;
+    position: absolute;
+    top: 20px;
+    left: 93px;
 }
+  
+ 
+  
